--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,31 @@ header {
   text-align: center;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+}
+
+.button-container {
+  margin: 0.5rem;
+}
+
+.button {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: #0099cc;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #0077a9;
+}
+
 footer {
   background-color: #333;
   color: #fff;
